# remindme

./: .env  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
migrations/: 20240215163644_create_reminder.sql
src/: main.rs
