[package]
name = "remindme_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.34", features = ["serde"]}
clokwerk = "0.4.0"
dotenv = "0.15.0"
futures = "0.3.30"
regex = "1.10.3"
serenity = "0.12.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'
